exmaple of use in a classification framework

--- a/src/Example EigenSample.ipynb
+++ b/src/Example EigenSample.ipynb
@@ -10,13 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.ensemble import (RandomForestClassifier, AdaBoostClassifier)\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import classification_report\n",
     "from EigenSamplerClassifier import *"
    ]
@@ -277,18 +278,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.dropna(inplace = True)\n",
     "X = df.drop('Survived', axis = 1)\n",
-    "y = df[['Survived']]"
+    "y = df[['Survived']]\n",
+    "X = StandardScaler().fit_transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,9 +307,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EigenSample - Fraction of new labels: 0.41282565130260523\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -318,28 +327,66 @@
     }
    ],
    "source": [
-    "# Here we perform data augmentation on the X_train and y_train datasets\n",
+    "# Here we generate new points using X_train and y_train\n",
     "model = AdaBoostClassifier()\n",
-    "augmented_X_train, augmented_y_train = EigenSamplerClassifier(X_train, y_train.values, model)"
+    "new_X_train, new_y_train = EigenSamplerClassifier(X_train, y_train.values, model, report = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We concatenate the generated datapoints to the original dataset\n",
+    "X_train_aug = np.concatenate((X_train, augmented_X_train))\n",
+    "y_train_aug = np.concatenate(( y_train.T.squeeze(), augmented_y_train))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The new dataset has two times the number of instances with respect to the original one:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dimensions X_train (row x col): (499, 9)\n",
+      "Dimensions X_train_aug (row x col): (998, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Dimensions X_train (row x col): {X_train.shape}\")\n",
+    "print(f\"Dimensions X_train_aug (row x col): {X_train_aug.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t Metrics with augmented datasets:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.50      0.34      0.41       126\n",
-      "           1       0.36      0.52      0.42        89\n",
+      "           0       0.79      0.84      0.82       126\n",
+      "           1       0.75      0.69      0.72        89\n",
       "\n",
-      "    accuracy                           0.41       215\n",
-      "   macro avg       0.43      0.43      0.41       215\n",
-      "weighted avg       0.44      0.41      0.41       215\n",
+      "    accuracy                           0.78       215\n",
+      "   macro avg       0.77      0.76      0.77       215\n",
+      "weighted avg       0.78      0.78      0.77       215\n",
       "\n"
      ]
     }
@@ -347,25 +394,28 @@
    "source": [
     "# Regression on the augmented datasets\n",
     "clf1 = RandomForestClassifier()\n",
-    "clf1.fit(augmented_X_train, augmented_y_train)\n",
+    "clf1.fit(X_train_aug, y_train_aug)\n",
+    "# Prediction\n",
     "y_pred1 = clf1.predict(X_test)\n",
     "# Print the test's metrics results\n",
+    "print(\"\\t Metrics with augmented datasets:\")\n",
     "print(classification_report(y_test, y_pred1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\t Metrics with original datasets:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.79      0.84      0.81       126\n",
-      "           1       0.75      0.67      0.71        89\n",
+      "           0       0.79      0.83      0.81       126\n",
+      "           1       0.74      0.70      0.72        89\n",
       "\n",
       "    accuracy                           0.77       215\n",
       "   macro avg       0.77      0.76      0.76       215\n",
@@ -377,7 +427,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-32-f210359adccd>:2: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "<ipython-input-66-cf16bf8eaa90>:3: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  clf2.fit(X_train, y_train)\n"
      ]
     }
@@ -386,8 +436,10 @@
     "# Regression on original datasets\n",
     "clf2 = RandomForestClassifier()\n",
     "clf2.fit(X_train, y_train)\n",
+    "# Prediction\n",
     "y_pred2 = clf2.predict(X_test)\n",
     "# Print the test's metrics results\n",
+    "print(\"\\t Metrics with original datasets:\")\n",
     "print(classification_report(y_test, y_pred2))"
    ]
   },
@@ -395,8 +447,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Performing data augmentation is a delicate task. In this example we see by the classification metrics that a lot of noise is added to the synthetic datasets.\n",
-    "Hence is always good to compare the metrics of the original dataset and the augmented one."
+    "#### Conclusion\n",
+    "Performing data augmentation is a delicate task. In this example we see by the classification metrics that the model had a slightly better overall performance (F1 score) on the original dataset, so the new points added more noise to the data.\n",
+    "\n",
+    "Is always good to compare the metrics of the original dataset and the augmented one. Trying different classifiers inside the EigenSampler module may improve the performance of it as well."
    ]
   }
  ],
